--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,16 +23,25 @@
         </div>
       </form>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button class="csunRed">
-        <mat-label>Log In</mat-label>
-        <mat-icon class="buttonIcon">check_circle</mat-icon>
-      </button>
+  <mat-card-actions>
+    <button mat-raised-button class="csunRed" (click)="goToPageSignUp()">
+      <i style="margin:5px; background-color: var(--csun-red); color: #FFFFFF;"></i>
+      <mat-label>Sign up</mat-label>
+      <mat-icon class="buttonIcon">check_circle</mat-icon>
+    </button>
+    <button mat-raised-button class="csunRed" class="btn googleBtn" (click)=" gmailAutentication()">
+      <i  style="margin:5px; background-color: var(--csun-red); color: #FFFFFF;"></i>
+      <mat-label>Google Log In</mat-label>
+      <mat-icon class="buttonIcon">check_circle</mat-icon>
+    </button>
+
+    </mat-card-actions>
+    <div>
       <button mat-raised-button class="goldenYellow" (click)="onClick()">
         <mat-label>Assistance</mat-label>
         <mat-icon class="buttonIcon">help</mat-icon>
       </button>
-    </mat-card-actions>
+    </div>
   </mat-card>
 </div>
 
